feat: add similarity search, add PropertyReferenceException handler